added previous op code, refactored eval of expression
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements130@505 d91eb1b3-1215-0410-9718-d41490442091